opam-version: "2.0"
name:         "spoke"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/spoke"
bug-reports:  "https://github.com/dinosaure/spoke/issues"
dev-repo:     "git+https://github.com/dinosaure/spoke.git"
doc:          "https://dinosaure.github.io/spoke/"
license:      "MIT"
synopsis:     "SPAKE+EE implementation in OCaml"
description: """A Password-authenticated key agreement protocol in OCaml"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
]
