opam-version: "2.0"
name:         "spoke"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/spoke"
bug-reports:  "https://github.com/dinosaure/spoke/issues"
dev-repo:     "git+https://github.com/dinosaure/spoke.git"
doc:          "https://dinosaure.github.io/spoke/"
license:      "MIT"
synopsis:     "SPAKE+EE implementation in OCaml"
description: """A Password-authenticated key agreement protocol in OCaml"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ] {os != "macos"}

depends: [
  "ocaml"         {>= "4.08.0"}
  "dune"          {>= "2.9.0"}
  "fmt"
  "hxd"
  "logs"
  "base64"        {>= "3.0.0"}
  "digestif"      {>= "0.8.1"}
  "bigstringaf"   {>= "0.9.0"}
  "encore"        {>= "0.8"}
  "ke"
  "mirage-crypto" {>= "0.11.0"}
  "mirage-flow"   {>= "3.0.0"}
  "lwt"           {>= "5.6.1"}
  "result"        {>= "1.5"}
  "mimic"         {with-test}
  "rresult"       {with-test}
  "tcpip"         {with-test}
]
