(library
 (name spoke)
 (public_name spoke.core)
 (modules spoke pbkdf2)
 (foreign_stubs
  (language c)
  (flags :standard)
  (names utils ed25519_ref10 xor))
 (libraries mirage-crypto encore digestif fmt))

(library
 (name flow)
 (public_name spoke.flow)
 (modules flow)
 (libraries base64 hxd.string hxd.core ke mirage-flow logs spoke.core))

(include_subdirs unqualified)
